# ResumeFit

./: .env.example  README.md  app.py  hallucinated_resume.md  pyproject.toml
db/: chroma.sqlite3
inputs/: better-resume.md  resume.md
outputs/: analyze_job_posting.md  cover_letter.md  draft_cover_letter.md  evaluate_resume.md  feedback.txt  feedback_report.md  interview_prep.md  prepare_interview.md  rewrite_resume.md  updated_resume.md
src/Hypermindz/: crew.py  main.py
src/Hypermindz/config/: agents.yaml  tasks.yaml
src/Hypermindz/tools/: custom_tool.py
src/ResumeFit/: crew.py  main.py
src/ResumeFit/config/: agents.yaml  tasks.yaml
src/ResumeFit/tools/: pdf_reader.py
