[project]
name = "ResumeFit"
version = "0.1.0"
description = "ResumeFit using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools==0.13.2",
    "crewai[tools]>=0.76.2,<1.0.0",
]

[project.scripts]
ResumeFit = "ResumeFit.main:run"
run_crew = "ResumeFit.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ResumeFit"]
